workloads/infra-test-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-test-node
spec:
  selector:
    app: infra-test-node
  ports:
    - name: http
      port: 80
      targetPort: 3000
