workloads/infra-test-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-test-node
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: nodejstest.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infra-test-node
                port:
                  number: 80
  tls:
    - hosts:
        - nodejstest.duckdns.org
      secretName: infra-test-node-tls
